<resources>
    <string name="app_name">DrFruithy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_article">Article</string>
    <string name="title_saved">Saved</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">App Title</string>
    <string name="image">image</string>
    <string name="image_article">Image Article</string>
    <string name="detect">Detect Now</string>
    <string name="title_disease">Disease Title</string>
    <string name="disease_description">Disease description</string>
    <string name="see_all">See All</string>
    <string name="guide">Guide</string>
    <string name="guide_description">Guide Description</string>
    <string name="title_guide">Guide</string>
    <string name="image_saved">image saved</string>
    <string name="title_saved_item">saved name</string>
    <string name="title_saved_text">Title :</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_text">Disease :</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="edit">edit</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="fruit">Fruit</string>
    <string name="tomato">Tomato</string>
    <string name="manggo">Manggo</string>
    <string name="apple">Apple</string>
    <string name="backbutton">backbutton</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="weclome">Weclome</string>
    <string name="not_have_account">Not have account?</string>
    <string name="password_space">Password</string>
</resources>