<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/detect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="?android:textColorPrimary"
        android:text="@string/detect"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageHome"/>

    <TextView
        android:id="@+id/articleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_article"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detect" />

    <TextView
        android:id="@+id/article_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/see_all"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/navBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detect" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/articleText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_article_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/image_article" />

            <TextView
                android:id="@+id/title_article_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image_article_card"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/title_disease"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                />

            <TextView
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:text="@string/disease_description"
                android:layout_toEndOf="@id/image_article_card"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="?android:textColorPrimary"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_guide"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_article" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guide_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guide"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_guide_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/image_article" />

            <TextView
                android:id="@+id/title_guide_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/image_guide_card"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/guide"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                />

            <TextView
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:text="@string/guide_description"
                android:layout_toEndOf="@id/image_guide_card"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="?android:textColorPrimary"

                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>